# blackhole-sim

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/ml/: DataCollection.hpp  LinearSVM.hpp  PlattScaling.hpp  RFF.hpp  Scaler.hpp  TrainUtils.hpp
src/sim/math/: Vec.hpp
src/sim/physics/: Gravity.hpp  Integrator.hpp
